--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+#Logging
+logging.level.root=INFO
+logging.file.path=logs
+logging.file.name=${logging.file.path}/group-65.log
+logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level
 
+#DataSource
+spring.datasource.url=jdbc:postgresql://localhost/avia
+spring.datasource.username=postgres
+spring.datasource.password=root
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+#Search for classes with @ENTITY and configure with parameters
+#Hibernate
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+
+jwt.secret=N7WvrHyEzaLiL
+jwt.expiration=36000000
