--- a/pom.xml
+++ b/pom.xml
@@ -42,11 +42,11 @@
             <version>42.6.0</version>
         </dependency>
 
-<!--        &lt;!&ndash;Security&ndash;&gt;-->
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-security</artifactId>-->
-<!--        </dependency>-->
+        <!--Security-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
         <!--Jaxb for JWT-->
         <dependency>
