--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #Logging
 logging.level.root=INFO
 logging.file.path=logs
-logging.file.name=${logging.file.path}/group-65.log
+logging.file.name=${logging.file.path}/AviaTrails.log
 logging.pattern.file=%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level
 
 #DataSource
@@ -15,5 +15,5 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 
-jwt.secret=N7WvrHyEzaLiL
+jwt.secret=N4ec6i002eREWbnfSecytr33LiLeoASch0
 jwt.expiration=36000000
