--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     </parent>
     <groupId>com.site</groupId>
     <artifactId>AviaTrails</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>AviaTrails</name>
     <description>AviaTrails</description>
     <properties>
